# ai-assistant-self-employers-pt

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/scripts/: ingest_docs.py  setup_index.py
backend/src/: api.py  indexer.py  llama_cloud.py  llama_cloud_service.py  llama_service.py  main.py  parser.py  query_engine.py  rag.py  service.py
backend/tests/: test_llama_cloud_service.py  test_parser.py  test_query_engine.py
experimentation/: extract_data_from_pdf.ipynb
frontend/: Dockerfile  app.py  content.json  pyproject.toml
notebooks/: data_extraction.ipynb  structured_output.json
qdrant_data/: raft_state.json
