[project]
name = "ai-assistant-self-employers-pt"
version = "0.1.0"
description = "AI-Assistant for Self-Employeers in Portugal"
authors = [
    {name = "paty-oliveira",email = "patriciia.mota@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.9"
dependencies = [
    "llama-index (>=0.9.40,<0.10.0)",
    "llama-parser (>=0.1.2,<0.2.0)",
    "llama-cloud-services (>=0.6.52,<0.7.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ["py312"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
