[project]
name = "ai-assistant-self-employers-pt"
version = "0.1.0"
description = "AI-Assistant for Self-Employeers in Portugal"
authors = [
    {name = "paty-oliveira",email = "patriciia.mota@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.9"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "llama-cloud-services (>=0.6.56,<0.7.0)",
    "llama-index-llms-openai (>=0.5.2,<0.6.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
pytest-mock = "^3.14.1"
pytest = "^8.4.1"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
