[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "Streamlit app of AI-Assistant for Self-Employeers in Portugal"
authors = ["paty-oliveira <patriciia.mota@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
streamlit = "^1.49.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ["py312"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
